# tau-tools

./: .gitignore  MAINTAINING.md  README.md  pyproject.toml  types.ts
src/tau_tools/: bidding.py  collect.py  courses.py  ims.py  lobby_dashboard.py  moodle.py  plans.py  prerequisites.py  syllabus.py  utilities.py
tau_tools/: courses.py  plans.py
