[project]
name = "tau-tools"
version = "0.1.1"
description = "Tools for accessing and using Tel Aviv University websites"
authors = [
    { name = "Arazim Project", email = "144990276+arazonim@users.noreply.github.com" },
]
dependencies = ["requests>=2.32.3", "colorama>=0.4.6", "beautifulsoup4>=4.12.3"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tau_tools"]
